--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "workspace-schematic": "./node_modules/.bin/nx workspace-schematic",
     "dep-graph": "./node_modules/.bin/nx dep-graph",
     "help": "./node_modules/.bin/nx help",
-    "federalist": "npm install --only=dev && ng build --project=sam-design-system-site --prod --base-href=$BASEURL/",
+    "federalist": "npm install --only=dev && ng build --project=sam-design-system-site --prod --base-href=/",
     "version": "node ./tools/scripts/update-libs-version.js && git add .",
     "postversion": "git push && git push --tags",
     "changelog": "gren changelog --override && git add . && git commit -m \"Add changelog\" && git push",
